--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- <div class="cube-wrapper">
+      <div class="cube" style="background-image: conic-gradient(from 0deg at 94%, #5bb1ff 137deg 129deg, #1860a1  133deg 270deg, #0084ff 270deg 360deg);background-size: 100% 187%;"></div>
+    </div> -->
     <main>
       <h2 id="score" class="score">0</h2>
       <div class="wrapper">
